Updated id names in css to make sense for more than just portfolio page icons, updated brand name for hobbies in mobile

--- a/hobbieViews/interior_design.html
+++ b/hobbieViews/interior_design.html
@@ -39,7 +39,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand hidden-lg hidden-md hidden-sm" href="#">Contact Me</a>
+            <a class="navbar-brand hidden-lg hidden-md hidden-sm" href="#">Interior Design</a>
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
@@ -137,30 +137,30 @@
     <!--End Sidenav-->
 
       
-      <div class="container portfolioContent">
+      <div class="container circleIconContainer">
         <div class="row">
           <center>  
-            <div class="col-lg-3 col-md-4 col-sm-6 portfolioPiece">
-              <a class="portfolioPieceLink" href="../coming_soon.html">
-                <img class="portfolioPieceIcon" src="../img/HobbieIcons/InteriorDesign.png"/>
+            <div class="col-lg-3 col-md-4 col-sm-6 iconColumn">
+              <a class="circleIconLink" href="../coming_soon.html">
+                <img class="circleIcon" src="../img/HobbieIcons/InteriorDesign.png"/>
                 <h1 class="colorPink">Livingrooms</h1>
               </a>
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 portfolioPiece">   
-              <a class="portfolioPieceLink" href="../coming_soon.html">
-                <img class="portfolioPieceIcon" src="../img/HobbieIcons/Bedroom.png"/>
+            <div class="col-lg-3 col-md-4 col-sm-6 iconColumn">   
+              <a class="circleIconLink" href="../coming_soon.html">
+                <img class="circleIcon" src="../img/HobbieIcons/Bedroom.png"/>
                 <h1 class="colorPink">Bedrooms</h1>
               </a>  
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 portfolioPiece">
-              <a  class="portfolioPieceLink" href="../coming_soon.html">
-                <img class="portfolioPieceIcon" src="../img/HobbieIcons/Office.png"/>
+            <div class="col-lg-3 col-md-4 col-sm-6 iconColumn">
+              <a  class="circleIconLink" href="../coming_soon.html">
+                <img class="circleIcon" src="../img/HobbieIcons/Office.png"/>
                 <h1 class="colorPink">Offices</h1>
               </a>       
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 portfolioPiece">
-              <a  class="portfolioPieceLink" href="../coming_soon.html">
-                <img class="portfolioPieceIcon" src="../img/HobbieIcons/Kitchen.png"/>
+            <div class="col-lg-3 col-md-4 col-sm-6 iconColumn">
+              <a  class="circleIconLink" href="../coming_soon.html">
+                <img class="circleIcon" src="../img/HobbieIcons/Kitchen.png"/>
                 <h1 class="colorPink">Kitchens</h1>
               </a>       
             </div>
