--- a/hobbies.html
+++ b/hobbies.html
@@ -56,29 +56,29 @@
       </nav>
 
       <center>  
-        <div class="container portfolioContent">
+        <div class="container circleIconContainer">
           <div class="row">
-            <div class="col-lg-3 col-md-4 col-sm-6 portfolioPiece">
-              <a class="portfolioPieceLink" href="hobbieViews/interior_design.html">
-                <img class="portfolioPieceIcon" src="img/HobbieIcons/InteriorDesign.png"/>
+            <div class="col-lg-3 col-md-4 col-sm-6 iconColumn">
+              <a class="circleIconLink" href="hobbieViews/interior_design.html">
+                <img class="circleIcon" src="img/HobbieIcons/InteriorDesign.png"/>
                 <h1 class="colorPink">Interior Design</h1>
               </a>
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 portfolioPiece">   
-              <a class="portfolioPieceLink" href="coming_soon.html">
-                <img class="portfolioPieceIcon" src="img/HobbieIcons/TripOrganizing.png"/>
+            <div class="col-lg-3 col-md-4 col-sm-6 iconColumn">   
+              <a class="circleIconLink" href="coming_soon.html">
+                <img class="circleIcon" src="img/HobbieIcons/TripOrganizing.png"/>
                 <h1 class="colorPink">Trip Organizing</h1>
               </a>  
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 portfolioPiece">
-              <a  class="portfolioPieceLink" href="coming_soon.html">
-                <img class="portfolioPieceIcon" src="img/HobbieIcons/Recipes.png"/>
+            <div class="col-lg-3 col-md-4 col-sm-6 iconColumn">
+              <a  class="circleIconLink" href="coming_soon.html">
+                <img class="circleIcon" src="img/HobbieIcons/Recipes.png"/>
                 <h1 class="colorPink">Recipes</h1>
               </a>       
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 portfolioPiece">
-              <a  class="portfolioPieceLink" href="coming_soon.html">
-                <img class="portfolioPieceIcon" src="img/HobbieIcons/Crafts.png"/>
+            <div class="col-lg-3 col-md-4 col-sm-6 iconColumn">
+              <a  class="circleIconLink" href="coming_soon.html">
+                <img class="circleIcon" src="img/HobbieIcons/Crafts.png"/>
                 <h1 class="colorPink">DIY</h1>
               </a>       
             </div>
