--- a/portfolio.html
+++ b/portfolio.html
@@ -56,36 +56,36 @@
       </nav>
 
       <center>  
-        <div class="container portfolioContent">
+        <div class="container circleIconContainer">
           <div class="row">
-            <div class="col-lg-3 col-md-4 col-sm-6 portfolioPiece">
+            <div class="col-lg-3 col-md-4 col-sm-6 iconColumn">
               <!--desktop pogo presentation display-->
-              <a class="portfolioPieceLink desktop" href="portfolioViews/pogo.html">
-                <img class="portfolioPieceIcon" src="img/PortfolioPieceIcons/PogoCircle.png"/>
+              <a class="circleIconLink desktop" href="portfolioViews/pogo.html">
+                <img class="circleIcon" src="img/PortfolioPieceIcons/PogoCircle.png"/>
                 <h1 class="colorPink">Pogo</h1>
               </a>
               <!--mobile pogo presentation display-->
-              <a class="portfolioPieceLink mobile" href="assets/portfolioPiece7-23.pdf" target="_blank">
-                <img class="portfolioPieceIcon" src="img/PortfolioPieceIcons/PogoCircle.png"/>
+              <a class="circleIconLink mobile" href="assets/portfolioPiece7-23.pdf" target="_blank">
+                <img class="circleIcon" src="img/PortfolioPieceIcons/PogoCircle.png"/>
                 <h1 class="colorPink">Pogo</h1>
               </a>                    
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 portfolioPiece">   
+            <div class="col-lg-3 col-md-4 col-sm-6 iconColumn">   
             <!--desktop CMP presentation display-->  
-              <a class="portfolioPieceLink desktop" href="portfolioViews/CMP.html">
-                <img class="portfolioPieceIcon" src="img/PortfolioPieceIcons/CMPCircle.png"/>
+              <a class="circleIconLink desktop" href="portfolioViews/CMP.html">
+                <img class="circleIcon" src="img/PortfolioPieceIcons/CMPCircle.png"/>
                 <h1 class="colorPink">Citi Marketplace</h1>
               </a>  
               <!--mobile CMP presentation display-->
-              <a class="portfolioPieceLink mobile" href="assets/MarketplaceEmployeeprofiles.pdf" target="_blank">
-                <img class="portfolioPieceIcon" src="img/PortfolioPieceIcons/CMPCircle.png"/>
+              <a class="circleIconLink mobile" href="assets/MarketplaceEmployeeprofiles.pdf" target="_blank">
+                <img class="circleIcon" src="img/PortfolioPieceIcons/CMPCircle.png"/>
                 <h1 class="colorPink">Citi Marketplace</h1>
               </a>       
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 portfolioPiece">  
+            <div class="col-lg-3 col-md-4 col-sm-6 iconColumn">  
               <!--desktop and mobile velocity project display-->
-              <a  class="portfolioPieceLink" href="portfolioViews/velocity.html">
-                <img class="portfolioPieceIcon" src="img/PortfolioPieceIcons/VelocityCircle.png"/>
+              <a  class="circleIconLink" href="portfolioViews/velocity.html">
+                <img class="circleIcon" src="img/PortfolioPieceIcons/VelocityCircle.png"/>
                 <h1 class="colorPink">Velocity</h1>
               </a>       
             </div>
