Fixing label spacing issue in protfolio views

--- a/hobbieViews/interior_design.html
+++ b/hobbieViews/interior_design.html
@@ -10,7 +10,6 @@
 
     <nav class="navbar navbar-default">
       <div class="container-fluid">
-
         <a class="navbar-brand hidden-xs navbar-right" href="index.html">
           <div class="nameBrand">
             <span class="kelseyBrand">
@@ -33,140 +32,146 @@
           </div>
         </a>
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand hidden-lg hidden-md hidden-sm" href="#">Interior Design</a>
-          </div>
-          <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-              <li><a href="../index.html">Home</a></li>
-              <li><a href="../portfolio.html">Portfolio</a></li>
-              <li><a href="../resume.html">Resume</a></li>
-              <li class="active"><a href="../hobbies.html">Hobbies</a></li>
-              <li><a href="../contactMe.html">Contact Me</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div><!--/.container-fluid -->
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand hidden-lg hidden-md hidden-sm" href="#">Interior Design</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../portfolio.html">Portfolio</a></li>
+            <li><a href="../resume.html">Resume</a></li>
+            <li class="active"><a href="../hobbies.html">Hobbies</a></li>
+            <li><a href="../contactMe.html">Contact Me</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div><!--/.container-fluid -->
     </nav>
 
-    <!--Sidenav-->
-    <div class="sidenavWrapper col-lg-3 col-md-4 col-sm-6 hidden-xs">
-      <ul class="nav navlist sidenav col-lg-9 col-md-10 col-sm-10 hidden-xs">
-          <li>
-              <button class="accordion activeAccordionButton active" id="idAccodionButton">Interior Design</button>
-              <div class="panel">
-                <p><a href="../coming_soon.html">Livingrooms</a></p>
-                <p><a href="../coming_soon.html">Bedrooms</a></p>
-                <p><a href="../coming_soon.html">Offices</a></p>
-                <p><a href="../coming_soon.html">Kitchens</a></p>
-              </div>
-          </li>
-          <li>
-              <button class="accordion" id="tpAccodionButton">Trip Organization</button>
-              <div class="panel">
-                <p>Ocean City Maryland 2017</p>
-                <p>Coachella 2017</p>
-                <p>Puerto Rico 2017</p>
-                <p>Killington Ski Trip 2017</p>
-                <p>Belmar 2016</p>
-                <p>Killington Ski Trip 2016</p>
-              </div>
-          </li>
-          <li>
-              <button class="accordion" id="recipesAccodionButton">Recipes</button>
-              <div class="panel">
-                <button class="accordion">Breakfast</button>
-                <div class="panel">
-                  <p>Quiche</p>
-                </div>  
-                <button class="accordion">Snacks</button>
-                <div class="panel">
-                  <p>Guacamole</p>
-                  <p>Cheese pull apart bread</p>
-                  <p>Cheese Stuffed Pretzels</p>
-                  <p>Cheesey Garlic Bread</p>
-                </div> 
-                <button class="accordion">Dinner</button>
-                <div class="panel">
-                  <p>The Best Parmesan Chicken Bake</p>
-                  <p>Meatballs</p>
-                  <p>Chicken Cordon Bleu</p>
-                  <p>Wayne's Greek Chicken</p>
-                  <p>Mashed Potatoes</p>
-                </div> 
-                <button class="accordion">Dessert</button>
-                <div class="panel">
-                  <button class="accordion">Cookies</button>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-3">
+          <!--Sidenav-->
+          <div class="sidenavWrapper col-lg-3 col-md-4 col-sm-6 hidden-xs">
+            <ul class="nav navlist sidenav col-lg-9 col-md-10 col-sm-10 hidden-xs">
+              <li>
+                  <button class="accordion activeAccordionButton active" id="idAccodionButton">Interior Design</button>
                   <div class="panel">
-                    <p>Chocolate Chip Cookies</p>
-                    <p>Banana Chocolate Chip Cookies</p>
-                  </div> 
-                  <button class="accordion">Pies</button>
+                    <p><a href="../coming_soon.html">Livingrooms</a></p>
+                    <p><a href="../coming_soon.html">Bedrooms</a></p>
+                    <p><a href="../coming_soon.html">Offices</a></p>
+                    <p><a href="../coming_soon.html">Kitchens</a></p>
+                  </div>
+              </li>
+              <li>
+                  <button class="accordion" id="tpAccodionButton">Trip Organization</button>
                   <div class="panel">
-                    <p>Apple Pie</p>
-                    <p>Strawberry Rhubarb Pie</p>
-                  </div> 
-                  <button class="accordion">Muffins</button>
+                    <p>Ocean City Maryland 2017</p>
+                    <p>Coachella 2017</p>
+                    <p>Puerto Rico 2017</p>
+                    <p>Killington Ski Trip 2017</p>
+                    <p>Belmar 2016</p>
+                    <p>Killington Ski Trip 2016</p>
+                  </div>
+              </li>
+              <li>
+                  <button class="accordion" id="recipesAccodionButton">Recipes</button>
                   <div class="panel">
-                    <p>Pumpkin Muffins</p>
-                    <p>Banana Nut Muffins</p>
-                  </div> 
-                  <button class="accordion">Miscellaneous</button>
+                    <button class="accordion">Breakfast</button>
+                    <div class="panel">
+                      <p>Quiche</p>
+                    </div>  
+                    <button class="accordion">Snacks</button>
+                    <div class="panel">
+                      <p>Guacamole</p>
+                      <p>Cheese pull apart bread</p>
+                      <p>Cheese Stuffed Pretzels</p>
+                      <p>Cheesey Garlic Bread</p>
+                    </div> 
+                    <button class="accordion">Dinner</button>
+                    <div class="panel">
+                      <p>The Best Parmesan Chicken Bake</p>
+                      <p>Meatballs</p>
+                      <p>Chicken Cordon Bleu</p>
+                      <p>Wayne's Greek Chicken</p>
+                      <p>Mashed Potatoes</p>
+                    </div> 
+                    <button class="accordion">Dessert</button>
+                    <div class="panel">
+                      <button class="accordion">Cookies</button>
+                      <div class="panel">
+                        <p>Chocolate Chip Cookies</p>
+                        <p>Banana Chocolate Chip Cookies</p>
+                      </div> 
+                      <button class="accordion">Pies</button>
+                      <div class="panel">
+                        <p>Apple Pie</p>
+                        <p>Strawberry Rhubarb Pie</p>
+                      </div> 
+                      <button class="accordion">Muffins</button>
+                      <div class="panel">
+                        <p>Pumpkin Muffins</p>
+                        <p>Banana Nut Muffins</p>
+                      </div> 
+                      <button class="accordion">Miscellaneous</button>
+                      <div class="panel">
+                        <p>Banana Bread</p>
+                      </div> 
+                    </div> 
+                  </div>
+              </li>
+              <li>
+                  <button class="accordion" id="diyAccodionButton">DIY</button>
                   <div class="panel">
-                    <p>Banana Bread</p>
-                  </div> 
-                </div> 
-              </div>
-          </li>
-          <li>
-              <button class="accordion" id="diyAccodionButton">DIY</button>
-              <div class="panel">
-                <p>Photo Wall</p>
-                <p>Light Fixtures</p>
-                <p>Stained Counters</p>
-                <p>Hair ApplianceStorage</p>
-                <p>Kitchen Counter</p>
-              </div>
-          </li>
-      </ul>
-    </div>
-    <!--End Sidenav-->
+                    <p>Photo Wall</p>
+                    <p>Light Fixtures</p>
+                    <p>Stained Counters</p>
+                    <p>Hair ApplianceStorage</p>
+                    <p>Kitchen Counter</p>
+                  </div>
+              </li>
+            </ul>
+          </div>
+          <!--End Sidenav-->
+        </div>
 
-      
-      <div class="container circleIconContainer">
-        <div class="row">
-          <center>  
-            <div class="col-lg-3 col-md-4 col-sm-6 iconColumn">
-              <a class="circleIconLink" href="../coming_soon.html">
-                <img class="circleIcon" src="../img/HobbieIcons/InteriorDesign.png"/>
-                <h1 class="colorPink">Livingrooms</h1>
-              </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 iconColumn">   
-              <a class="circleIconLink" href="../coming_soon.html">
-                <img class="circleIcon" src="../img/HobbieIcons/Bedroom.png"/>
-                <h1 class="colorPink">Bedrooms</h1>
-              </a>  
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 iconColumn">
-              <a  class="circleIconLink" href="../coming_soon.html">
-                <img class="circleIcon" src="../img/HobbieIcons/Office.png"/>
-                <h1 class="colorPink">Offices</h1>
-              </a>       
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 iconColumn">
-              <a  class="circleIconLink" href="../coming_soon.html">
-                <img class="circleIcon" src="../img/HobbieIcons/Kitchen.png"/>
-                <h1 class="colorPink">Kitchens</h1>
-              </a>       
-            </div>
-          </center>
-        </div>  
-      </div>  
+        <div class="col-sm-9">
+<!--           <div class="container circleIconContainer"> -->
+            <!-- <div class="row"> -->
+              <center>  
+                <div class="col-lg-4 col-md-5 col-sm-6 iconColumn">
+                  <a class="circleIconLink" href="../coming_soon.html">
+                    <img class="circleIcon" src="../img/HobbieIcons/InteriorDesign.png"/>
+                    <h1 class="colorPink">Livingrooms</h1>
+                  </a>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 iconColumn">   
+                  <a class="circleIconLink" href="../coming_soon.html">
+                    <img class="circleIcon" src="../img/HobbieIcons/Bedroom.png"/>
+                    <h1 class="colorPink">Bedrooms</h1>
+                  </a>  
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 iconColumn">
+                  <a  class="circleIconLink" href="../coming_soon.html">
+                    <img class="circleIcon" src="../img/HobbieIcons/Office.png"/>
+                    <h1 class="colorPink">Offices</h1>
+                  </a>       
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 iconColumn">
+                  <a  class="circleIconLink" href="../coming_soon.html">
+                    <img class="circleIcon" src="../img/HobbieIcons/Kitchen.png"/>
+                    <h1 class="colorPink">Kitchens</h1>
+                  </a>       
+                </div>
+              </center>
+           <!--  </div>   -->
+          </div> 
+        </div><!--end row-->
+    </div> <!--End container-->
       
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
